# ScrapeTL

./: .TODO  .cursorrules  .gitignore  DOCKER.md  Dockerfile  FIXED_BUGS.md  LICENSE  README.md  TODO  TODO.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.claude/: settings.local.json
PATCHES/: 001_architecture_overview_v2.md  002_database_schema.md  003_frontend_structure.md  004_api_and_code_analysis.md  005_scraper_enhancements.md  006_ui_refinements.md  007_logs_filter_popover.md  008_timezones_and_filter_ux.md  BUILDER.md  EXPRESSIONS.md  FIXED_BUGS.md  SCRAPER_INPUTS.md
PATCHES/releases/: Release_2.0.0.md  Rolling.md
app/: database.py  discord.py  exceptions.py  expressions.py  http_sender.py  logging_manager.py  main.py  models.py  recipe_runner.py  runner.py  runner.py.bak  scheduler.py
app/api/: functions.py  integrations.py  logs.py  run.py  schedules.py  scrapers.py  settings.py  tags.py  variables.py
app/builder/: engine.py  generator.py
app/functions/: base.py
app/scrapers/: __init__.py  base.py  example_scraper.py  revenge_of_the_iron_blooded_sword_hound.py  revenge_of_the_iron_blooded_sword_hound_e133.py  test.py  test_1bf4.py  test_303b.py
docs/: BUILDER.md  FIXED_BUGS.md
docs/plans/: 2024-08-20-engine-and-frontend-improvements.md
docs/releases/: Release_1.0.0.md
examples/: abc.py  asurascanz.py  erascans.py  example_generator.py  is_valid_func unsafe.py  scraper.py  sitemap_walker_func.py  test_failing.py  test_longrunning.py  test_manyinputs.py  udf_comparator.py  udf_example.py  udf_generator.py  udf_transformer.py  webtoons.py
examples/UDFs/: comparator_validators.py  generator_stackoverflow.py
examples/backup/: asurascanz.py  booking2.py  clean_name_func.py  erascans.py  example_generator.py  exfunc.py  function_generate_url.py  is_valid_func.py  test_failing.py  test_longrunning.py  test_manyinputs.py  webtoons.py
frontend/: README.md  app.js  index.html  style.css
frontend/modules/: builder.js  components.js  logs.js  nav.js  runner.js  schedules.js  scrapers.js  settings.js  state.js  variables.js
scrapetl/: __init__.py  cli.py  database.py  discord.py  exceptions.py  expressions.py  http_sender.py  logging_manager.py  main.py  models.py  runner.py  scheduler.py  task_registry.py
scrapetl/api/: functions.py  integrations.py  logs.py  run.py  schedules.py  scrapers.py  settings.py  tags.py  variables.py
scrapetl/builder/: engine.py  generator.py
scrapetl/frontend/: index.html  style.css
scrapetl/frontend/modules/: builder.js  components.js  integrations.js  logs.js  (+6 more)
scrapetl/functions/: base.py
scrapetl/scrapers/: __init__.py  base.py
