[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapetl"
version = "3.0.0a1"
description = "Web scraper orchestration platform with a visual flow builder"
readme = "README.md"
authors = [{ name = "Sadig Akhund" }]
keywords = ["scraping", "automation", "etl", "no-code", "web-scraper", "fastapi"]
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "apscheduler>=3.10.4",
    "sqlalchemy>=2.0.35",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
    "croniter>=3.0.3",
    "beautifulsoup4>=4.12.3",
    "python-multipart>=0.0.9",
    "pytz>=2024.1",
    "tzlocal>=5.2",
    "openpyxl>=3.1",
]

[project.urls]
Homepage = "https://github.com/sadigaxund/ScrapeTL"
Repository = "https://github.com/sadigaxund/ScrapeTL.git"
Issues = "https://github.com/sadigaxund/ScrapeTL/issues"

[project.optional-dependencies]
playwright = [
    "playwright>=1.49.1",
    "playwright-stealth>=1.0.6",
]

[project.scripts]
scrapetl = "scrapetl.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scrapetl*"]

[tool.setuptools.package-data]
scrapetl = ["frontend/**/*"]
